--- a/src/blocks/header/__logo/header__logo.css
+++ b/src/blocks/header/__logo/header__logo.css
@@ -2,7 +2,7 @@
   width: 142px;
   height: 33px;
   object-fit: cover;
-  display: block;
+  /* display: block; */
 }
 
 @media screen and (max-width: 768px) {
