--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -4,6 +4,11 @@
   margin: 0 auto;
   padding: 45px 0 41px;
   border-bottom: 1px solid rgba(84, 84, 84, 0.7);
+  display: flex;
+  flex-direction:row;
+  justify-content: space-between;
+  align-items: center;
+  
 }
 
 @media screen and (max-width: 768px) {
