--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,8 @@
 @import url(./blocks/header/__logo/header__logo.css);
 @import url(./blocks/header/__text/header__text.css);
 @import url(./blocks/header/__info/header__info.css);
+@import url(./blocks/login/login.css);
+@import url(./blocks/register/register.css);
 @import url(./blocks/main/main.css);
 @import url(./blocks/button/button.css);
 @import url(./blocks/profile/profile.css);
