--- a/src/blocks/register/register.css
+++ b/src/blocks/register/register.css
@@ -1,102 +1,113 @@
 .register {
-    background-color: #000;
-    height: 100%;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    position: relative;
-  }
-  
+  background-color: #000;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
 
 .register__container {
-    width: 358px;
-    padding: 34px 36px 37px;
-    box-sizing: content-box;
-    position: relative;
-    margin-top: 26px;
+  width: 358px;
+  padding: 34px 36px 37px;
+  box-sizing: content-box;
+  position: relative;
+  margin-top: 26px;
+}
+
+@media screen and (max-width: 768px) {
+  .register__container {
+    width: 282px;
+    padding: 21px 22px 25px;
   }
-  
-  @media screen and (max-width: 768px) {
-    .register__container {
-      width: 282px;
-      padding: 21px 22px 25px;
-    }
-  }
-  
+}
+
+.register__title {
+  margin-block-start: 0;
+  margin-block-end: 0;
+  margin: 0 auto 50px;
+  text-align: center;
+  font-size: 24px;
+  line-height: 29.05px;
+  font-weight: 900;
+}
+
+@media screen and (max-width: 768px) {
   .register__title {
-    margin-block-start: 0;
-    margin-block-end: 0;
-    margin: 0 auto 50px;
-    text-align: center;
-    font-size: 24px;
-    line-height: 29.05px;
-    font-weight: 900;
-  }
-  
-  @media screen and (max-width: 768px) {
-    .register__title {
-      margin-block-end: 69px;
-      font-size: 18px;
-    }
-  }
-  
-  .register__text {
-    margin-block-start: 0;
-    margin-block-end: 30px;
-    color: #fff;
-    background-color: #000;
-    font-size: 14px;
-    line-height: 1.21;
-    font-weight: 500;
-    padding: 0 0 9px;
-    width: 100%;
-    border: none;
-    border-bottom: 2px solid #ccc;
-    box-sizing: border-box;
-  }
-
-  @media screen and (max-width: 768px) {
-    .register__text {
-      padding-bottom: 9.06px;
-    }
-  }
-
-  .register__subtitle {
-    margin-block-start: 15px;
-    margin-block-end: 0;
-    color: #fff;
-    font-size: 14px;
-    line-height: 1.21;
-    font-weight: 400;
-    text-align: center;
-   }
-
-  .register__submit-button {
-    width: 358px;
-    height: 50px;
-    background-color:#fff ;
-    margin: 186px auto 0;
-    border: none;
-    border-radius: 2px;
+    margin-block-end: 69px;
     font-size: 18px;
-    line-height: 1.21;
-    font-weight: 400;
-    color: #000000;
-    text-align: center;
-    padding: 0;
   }
-  
-  @media screen and (max-width: 768px) {
-    .register__submit-button {
-      width: 238px;
-      height: 46px;
-      font-size: 14px;
-    }
+}
+
+.register__text {
+  margin-block-start: 0;
+  margin-block-end: 30px;
+  color: #fff;
+  background-color: #000;
+  font-size: 14px;
+  line-height: 1.21;
+  font-weight: 500;
+  padding: 0 0 9px;
+  width: 100%;
+  border: none;
+  border-bottom: 2px solid #ccc;
+  box-sizing: border-box;
+}
+
+@media screen and (max-width: 768px) {
+  .register__text {
+    padding-bottom: 9.06px;
   }
-  
-  .register__submit-button:hover {
-    opacity: 0.8;
+}
+
+.register__signin {
+  margin: 15px 0 0;
+  font-size: 14px;
+  line-height: 1.21;
+  font-weight: 400;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
+.register__signin-text {
+  margin-block-start: 0;
+  margin-block-end: 0;
+  color: #fff;
+}
+
+.register__signin-link {
+  margin-block-start: 0;
+  margin-block-end: 0;
+  color: #fff;
+  text-decoration: none;
+}
+
+.register__submit-button {
+  width: 358px;
+  height: 50px;
+  background-color: #fff;
+  margin: 186px auto 0;
+  border: none;
+  border-radius: 2px;
+  font-size: 18px;
+  line-height: 1.21;
+  font-weight: 400;
+  color: #000000;
+  text-align: center;
+  padding: 0;
+}
+
+@media screen and (max-width: 768px) {
+  .register__submit-button {
+    width: 238px;
+    height: 46px;
+    font-size: 14px;
   }
-  
+}
+
+.register__submit-button:hover {
+  opacity: 0.8;
+}
