--- a/src/blocks/info/info.css
+++ b/src/blocks/info/info.css
@@ -1,42 +1,66 @@
-.info__container {
-    width: 430px;
-    height: 330px;
-    background-color: #fff;
-    border-radius: 10px;
-    box-shadow: 0 0 25px rgba(0, 0, 0, 0.15);
-    padding: 60px 36px;
-    box-sizing: border-box;
-    position: relative;
-  }
-  
-  @media screen and (max-width: 768px) {
-    .info__container {
-      width: 280px;
-      height: 308px;
-      padding: 50px 18px;
-    }
-  }
-  
-  .info__icon {
-    width:120px;
-    height: 120px;
-    margin: 0 auto 40px;
-  }
+.info {
+  background-color: rgba(0, 0, 0, 0.5);
+  height: 100%;
+  width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  visibility: hidden;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  opacity: 0;
+  transition: visibility 0s ease-in-out 1s, opacity 1s 0s;
+}
 
-   .info__title {
-    margin-block-start: 0;
-    margin-block-end: 0;
-    text-align: center;
-    color: #000;
-    font-size: 24px;
-    line-height: 29.05px;
-    font-weight: 900;
+.info_opened {
+  visibility: visible;
+  opacity: 1;
+  transition: visibility 0s ease-in-out, opacity 1s;
+}
+
+.info__container {
+  width: 430px;
+  height: 330px;
+  background-color: #fff;
+  border-radius: 10px;
+  box-shadow: 0 0 25px rgba(0, 0, 0, 0.15);
+  padding: 60px 36px;
+  box-sizing: border-box;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+@media screen and (max-width: 768px) {
+  .info__container {
+    width: 280px;
+    height: 308px;
+    padding: 50px 18px;
   }
-  
-  @media screen and (max-width: 768px) {
-    .info__title {
-      font-size: 20px;
-      line-height: 24.2px;
-    }
+}
+
+.info__icon {
+  width: 120px;
+  height: 120px;
+  margin: 0 auto 40px;
+}
+
+.info__title {
+  margin-block-start: 0;
+  margin-block-end: 0;
+  text-align: center;
+  color: #000;
+  font-size: 24px;
+  line-height: 29.05px;
+  font-weight: 900;
+}
+
+@media screen and (max-width: 768px) {
+  .info__title {
+    font-size: 20px;
+    line-height: 24.2px;
   }
-  
+}
